objects/Policy_Certificate__c/fields/Certificate_Number__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Number__c</fullName>
    <label>Certificate Number</label>
    <length>225</length>
    <required>true</required>
    <type>Text</type>
</CustomField>