objects/Policy_Certificate__c/fields/Integration_Key__c.field-meta.xml
<CustomField>
    <fullName>Integration_Key__c</fullName>
    <description>It is the combination of SourceSystem and CertificateNumber with the format as SourceSystem-PolicyNumber-CertificateNumber-SequenceNumber. PolicyNumber will be got by joining PolicyID with PolicyReference Object. 
The purpose is only to support the API integration pattern with the unique ExternalID for SFDC limitation and performance.</description>
    <externalId>true</externalId>
    <inlineHelpText>It is the combination of SourceSystem and CertificateNumber with the format as SourceSystem-PolicyNumber-CertificateNumber-SequenceNumber. PolicyNumber will be got by joining PolicyID with PolicyReference Object.</inlineHelpText>
    <label>Integration Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>