objects/Policy_Certificate__c/fields/Policy__c.field-meta.xml
<CustomField>
    <fullName>Policy__c</fullName>
    <label>Policy</label>
    <referenceTo>Policy_Reference__c</referenceTo>
    <relationshipLabel>Policy Certificates</relationshipLabel>
    <relationshipName>Policy_Certificates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>